--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,7 +4,7 @@
           <%= link_to "Yoptic", root_path , id: "logo" %>
           <nav>
             <ul class="nav pull-right">
-              <li><%= link_to "X",    '#' %></li>
+              <li><%= link_to "Signup", new_path %></li>
             </ul>
           </nav>
         </div>
