--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,2 +1,6 @@
-<h1>StaticPages#about</h1>
-<p>Find me in app/views/static_pages/about.html.erb</p>
+<div class="center hero-unit">
+<h1>Acerca de Yoptic</h1>
+<h2>Nuestra plataforma permite a las opticas gestionar todos su procesos administrativos y operativos eficiente y eficazmente llevando su empresa a la excelencia.</h2>
+<p>Para mayor informacion ingresa al link de nuestra pagina corporativa en el siguiente link:</p> 
+<%= link_to "nuestra pagina corporativa", "http://www.yoptic.com" %>
+</div>
