--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,5 +1,5 @@
 <div class="center hero-unit">
   <h1>Bienvenido a Yoptic </h1>
 <p>Yoptic es la plataforma online que te permite administrar los procesos de tu optica y alcanzar el exito</p>
-<%= link_to "Ingresar a la plataforma", about_path, class: "btn btn-large btn-primary"%>
+<%= link_to "Ingresar a la plataforma", new_path, class: "btn btn-large btn-primary"%>
 </div>
