--- a/app/views/static_pages/terms.html.erb
+++ b/app/views/static_pages/terms.html.erb
@@ -1,2 +1,4 @@
-<h1>StaticPages#terms</h1>
-<p>Find me in app/views/static_pages/terms.html.erb</p>
+<div class="center hero-unit">
+<h1>Terminos y condiciones</h1>
+<p>Esta es la pagina de terminos y condiciones</p>
+</div>
